tests/parser/bad/cmodule-transition-id-lparen-with.scilla
scilla_version 0

contract Nothing
()

transition something { with
